phpunit support and initial tests

--- a/grunt/aliases.yml
+++ b/grunt/aliases.yml
@@ -3,9 +3,12 @@ default:
   - test
   - watch
 
+test:
+  - phpunit
+
 build:
   - shell:zephirFullClean
   - shell:zephirBuild
 
-test:
+run:
   - shell:zephirTest
